--- a/0x15-file_io/.vscode/settings.json
+++ b/0x15-file_io/.vscode/settings.json
@@ -1,11 +1,10 @@
 {
-  "C_Cpp_Runner.cCompilerPath": "gcc",
-  "C_Cpp_Runner.cppCompilerPath": "g++",
-  "C_Cpp_Runner.debuggerPath": "gdb",
+  "C_Cpp_Runner.cCompilerPath": "/usr/bin/clang",
+  "C_Cpp_Runner.cppCompilerPath": "/usr/bin/clang++",
+  "C_Cpp_Runner.debuggerPath": "/usr/bin/lldb",
   "C_Cpp_Runner.cStandard": "",
   "C_Cpp_Runner.cppStandard": "",
   "C_Cpp_Runner.msvcBatchPath": "",
-  "C_Cpp_Runner.useMsvc": false,
   "C_Cpp_Runner.warnings": [
     "-Wall",
     "-Wextra",
@@ -27,5 +26,6 @@
     "**/.*/**",
     "**/.vscode",
     "**/.vscode/**"
-  ]
+],
+"C_Cpp.errorSquiggles": "Disabled"
 }
